Add user management functionality with JPA and REST API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=store-backend
+
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=jdbc:sqlserver://store-sql-serverless.database.windows.net:1433;encrypt=true;trustServerCertificate=false;loginTimeout=30;database=online-store;
+spring.datasource.username=store-sql-serverless-admin@store-sql-serverless
+spring.datasource.password=A7b!cdef
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
